--- a/Practica2_viernes/css/maquetacion_Responsivo.css
+++ b/Practica2_viernes/css/maquetacion_Responsivo.css
@@ -46,4 +46,21 @@
     body{
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
+    h1{
+        font-size: 1.5em;
+    }
+    h2{
+        font-size: 1.2em;
+        border-bottom: 1px solid saddlebrown;
+    }
+    ul{
+        list-style: none;
+        padding: 0;
+    }
+    li + li{
+        margin-top: 10%;
+    }
+    li strong{
+        display: block;
+    }
 }
